fixed items alignment

--- a/style.css
+++ b/style.css
@@ -1,3 +1,9 @@
+@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300;400;500;600;700&family=Poppins:wght@300;400;500;700&display=swap');
+bodys
+{
+    font-family: 'Open Sans', sans-serif;
+font-family: 'Poppins', sans-serif;
+}
 .head1 {
     color: #EA580C;
     text-align: center;
@@ -8,15 +14,22 @@
     max-width: 350px;
     margin: auto;
     padding: 1rem;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+
 }
 
 .div1 {
     text-align: center;
     font-size: larger;
+    color: #EA580C;
+    
+    font-weight: bold;
 }
 
 .div2 {
-    text-align: center;
+    
     font-weight: bold;
     padding: 1rem;
     font-size: 30px;
@@ -26,19 +39,19 @@
     border-radius: 0.2rem;
     border-style: solid;
     border-color: #EA580C;
-    margin-left: 6rem;
+    
 }
 
-.btn1 {
-    text-align: center;
-}
 
-.btn1 button {
+
+button {
     padding: 0.5rem 1rem;
     background-color: #EA580C;
     border: none;
     color: white;
     border-radius: 0.2rem;
+    cursor: pointer;
+    margin-top: 2rem;
 
 
 }
